1998-04-29  Harri Porten  <porten@tu-harburg.de>

	* connect.cpp: prevented segfault on invalid lockfiles
	* runtests.cpp: /etc/resolv.conf will be created if missing 

Tue Apr 28 20:57:04 1998    Mario Weilguni <mweilguni@kde.org>

	* added CHAP (client side only) authentication

1998-04-27  Harri Porten  <porten@tu-harburg.de>

	* general.cpp (GeneralWidget): command line option "quit after
	end of connection" is availabe via GUI, too.
	* hangup(): made another usleep() adjustable to prevent hanging 
	(thanks to A.D.Y. Cheng <adyc100@hkstar.com> for pointing that out)

Fri Apr 24 18:57:46 1998    Mario Weilguni <mweilguni@kde.org>

	* general.cpp (GeneralWidget): removed the entry field for
	  the path to the pppd binary

Fri Apr 24 13:03:02 1998    Mario Weilguni <mweilguni@kde.org>

	* runtests.cpp: kppp now does not allow anymore the user
	  to specify a path to the pppd binary, but searches for
	  it 
	* kppp now checks if pppd is owned by root
	* kppp does not anymore drop suid before starting pppd

Thu Apr 23 22:35:31 1998    Mario Weilguni <mweilguni@kde.org>

	* Fixed a few security holes: kppp drops suid before executing pppd,
	  checks for buffer overflow with the -c command line switch,
	  drops suid before checking a file with -r

Thu Apr 16 21:21:03 1998  Harri Porten  <porten@tu-harburg.de>

	* main.cpp: set portable locale settings for numerical values,
	since the rulefiles will always have a point as decimal delimiter.

1998-04-15  Harri Porten  <porten@tu-harburg.de>

	* connect.cpp: extended parseargs() to deal with quoted arguments
	* fixed bug in 'Save' that made multiple use impossible.
	* enclosed username and password with quotes to ensure proper
	handling of whitespace characters
	* pap.cpp: fixed regexp to recognize entries in pap-secrets with
	usernames that are either quoted or preceeded by whitspace. Phew !
	That should eliminate one source of these "pppd	died" errors.
	
Mon Apr  6 20:18:40 1998    <mweilguni@kde.org>
